--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,9 @@
     <application
         android:name=".Application.App"
         android:allowBackup="true"
-        android:icon="@drawable/filemanager"
+        android:icon="@mipmap/operate"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <application android:name=".Activity.MyApplication" />
-
         <activity
             android:name=".Activity.HomeActivity"
             android:label="@string/app_name" >
