--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.example.manager"
@@ -14,14 +14,9 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt_rotate'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-//    repositories {
-//        flatDir {
-//            dirs 'libs'
-//        }
-//    }
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -30,10 +25,8 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
     compile files('libs/Msc.jar')
     compile files('libs/nineoldandroids-library-2.4.0.jar')
     compile files('libs/android-support-v4.jar')
     compile project(':libzxing')
-    compile files('libs/universal-image-loader-1.9.5.jar')
 }
