--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,10 @@
             android:name=".Activity.PCFileActivity"
             android:label="@string/title_activity_pcfile_list" >
         </activity>
+        <activity
+            android:name=".Activity.ToPhone"
+            android:label="@string/title_activity_to_phone" >
+        </activity>
     </application>
 
 </manifest>
