--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name="com.zmt.manager.Application.App"
         android:allowBackup="true"
-        android:icon="@mipmap/operate"
+        android:icon="@mipmap/task_manager"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
@@ -52,10 +52,6 @@
         <activity
             android:name="com.zmt.manager.Activity.PCFileActivity"
             android:label="@string/title_activity_pcfile_list" >
-        </activity>
-        <activity
-            android:name=".Activity.ToPhone"
-            android:label="@string/title_activity_to_phone" >
         </activity>
     </application>
 
