--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name="com.zmt.manager.Application.App"
         android:allowBackup="true"
-        android:icon="@mipmap/task_manager"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
